--- a/ppas/20181122/20181122_01.md
+++ b/ppas/20181122/20181122_01.md
@@ -60,7 +60,71 @@ ORDER BY id DESC;
 
 2. **PPAS数据库**
 ```
+CREATE TYPE t_tf_row AS OBJECT (
+  id           NUMBER,
+  description  VARCHAR2(50)
+);
 
+CREATE TYPE t_tf_tab IS TABLE OF t_tf_row;
+
+CREATE OR REPLACE FUNCTION get_tab_ptf (p_rows IN NUMBER) RETURN SETOF RECORD
+AS
+BEGIN
+  FOR i IN 1 .. p_rows LOOP
+    RETURN NEXT t_tf_row(i, 'Description for ' || i);
+  END LOOP;
+  RETURN;
+END;
+
+
+SELECT * FROM get_tab_ptf(10) foo(id numeric, val varchar(50)) order by id desc;
+ id |        val         
+----+--------------------
+ 10 | Description for 10
+  9 | Description for 9
+  8 | Description for 8
+  7 | Description for 7
+  6 | Description for 6
+  5 | Description for 5
+  4 | Description for 4
+  3 | Description for 3
+  2 | Description for 2
+  1 | Description for 1
+(10 rows)
+
+edb=# 
+
+-- Using table type
+
+CREATE OR REPLACE FUNCTION get_tab_ptf_test (p_rows IN NUMBER) RETURN t_tf_tab
+AS
+DECLARE
+   return_Val t_tf_tab;
+BEGIN
+  return_Val = t_tf_tab();
+  FOR i IN 1 .. p_rows LOOP
+    return_val.EXTEND;
+    return_val(i):= t_tf_row(i, 'Description for ' || i);
+  END LOOP;
+  RETURN return_Val;
+END;
+
+SELECT * FROM table(get_tab_ptf_test (10)) order by id desc;
+ id |    description     
+----+--------------------
+ 10 | Description for 10
+  9 | Description for 9
+  8 | Description for 8
+  7 | Description for 7
+  6 | Description for 6
+  5 | Description for 5
+  4 | Description for 4
+  3 | Description for 3
+  2 | Description for 2
+  1 | Description for 1
+(10 rows)
+
+edb=# 
 ```
 
 ### 四、参考链接
