--- a/ppas/20190306/20190306_01.md
+++ b/ppas/20190306/20190306_01.md
@@ -11,7 +11,17 @@ BITAND (argument1 , argument2)
 ```
 
 ### 二、转换规则
+1. **Oracle数据库**
+```
+
+```
+
+2. **PPAS数据库**
+```
+
+```
 
 
 ### 三、参考链接
-
+1.[https://docs.oracle.com/cd/E18283_01/olap.112/e17122/dml_functions_1029.htm](https://docs.oracle.com/cd/E18283_01/olap.112/e17122/dml_functions_1029.htm)
+2.[https://www.postgresql.org/docs/10/functions-bitstring.html](https://www.postgresql.org/docs/10/functions-bitstring.html)
