--- a/ppas/20190306/20190306_01.md
+++ b/ppas/20190306/20190306_01.md
@@ -5,7 +5,7 @@
 BITAND 函数对两个非负值的位计算逻辑AND运算，这个函数通常在DECODE函数中使用。返回类型为INTEGER。
 AND运算比较两个位值。 当值相同时，运算符返回1.当值不同时，运算符返回0。仅比较有效位。例如，对整数5（二进制101）和1（二进制001或1）的AND运算仅比较最右边的位，并产生值1（二进制1）。
 
-**基本语法:**
+**Oracle基本语法:**
 ```
 BITAND (argument1 , argument2)
 ```
