--- a/ppas/20190306/20190306_01.md
+++ b/ppas/20190306/20190306_01.md
@@ -11,6 +11,7 @@ BITAND (argument1 , argument2)
 ```
 
 **PPAS语法：**
+
 1.**Bit字符操作符**
 
 |操作符|描述|案例|结果|
@@ -18,18 +19,38 @@ BITAND (argument1 , argument2)
 |&	|bitwise AND	|B'10001' & B'01101'|	00001|
 
 2.**创建函数**
-
+```
+CREATE OR REPLACE FUNCTION bitand(expr1 anynonarray, expr2 anynonarray) RETURNS bigint AS $$
+  SELECT expr1::bigint & expr2::bigint;
+  $$ LANGUAGE SQL IMMUTABLE LEAKPROOF;
+```
 
 
 ### 二、转换规则
 1. **Oracle数据库**
 ```
+SQL> select bitand(1,2) from dual;
 
+BITAND(1,2)
+-----------
+	  0
 ```
 
 2. **PPAS数据库**
 ```
+-- 1. 使用 & 位操作符
+edb=# select 1&2;
+ ?column? 
+----------
+        0
+(1 row)
 
+-- 2. 使用 BITAND 函数
+edb=# SELECT bitand(1,2) FROM dual;
+ bitand 
+--------
+      0
+(1 row)
 ```
 
 
