--- a/ppas/20190306/20190306_01.md
+++ b/ppas/20190306/20190306_01.md
@@ -45,7 +45,7 @@ edb=# select 1&2;
         0
 (1 row)
 
--- 2. 使用 BITAND 函数
+-- 2. 使用自建的 BITAND 函数
 edb=# SELECT bitand(1,2) FROM dual;
  bitand 
 --------
