--- a/ppas/20190306/20190306_01.md
+++ b/ppas/20190306/20190306_01.md
@@ -53,6 +53,28 @@ edb=# SELECT bitand(1,2) FROM dual;
 (1 row)
 ```
 
+**补充：bitor**
+```
+-- 使用 | 位操作符
+edb=# select 1|2;
+ ?column? 
+----------
+        3
+
+
+-- 自建 BITOR 函数：
+CREATE OR REPLACE FUNCTION bitor(expr1 anynonarray, expr2 anynonarray) RETURNS bigint AS $$
+  SELECT expr1::bigint | expr2::bigint;
+  $$ LANGUAGE SQL IMMUTABLE LEAKPROOF;
+
+
+edb=# SELECT bitor(1,2) FROM dual;
+ bitor 
+-------
+     3
+
+```
+
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/E18283_01/olap.112/e17122/dml_functions_1029.htm](https://docs.oracle.com/cd/E18283_01/olap.112/e17122/dml_functions_1029.htm)
