--- a/ppas/20190314/20190314_01.md
+++ b/ppas/20190314/20190314_01.md
@@ -2,6 +2,16 @@
 ---
 
 ### 一、背景介绍
+和分区表一样，分区索引主要提高管理性、可用性、性能、可扩展性。索引可以是分区的独立的 global indexes 或者是分区依赖的 local indexes。通常 global indexes 适用于在OLTP系统中，而 local indexes 适用于OLAP或者DSS 应用。
+
+**分区索引类型选择**
+1. 索引 带分布键 => local indexes
+2. 唯一索引 & 不包含分区键  => global index
+3. 优先级是可管理性  => local indexes
+4. 应用是OLTP & 用户需要快速响应   => global index
+5. 应用是DSS & 用户更关注于吞吐量   => local index
+
+
 
 ### 二、转换规则
 
