--- a/ppas/20190314/20190314_01.md
+++ b/ppas/20190314/20190314_01.md
@@ -11,6 +11,8 @@
 4. 应用是OLTP & 用户需要快速响应   => global index
 5. 应用是DSS & 用户更关注于吞吐量   => local index
 
++ GLOBAL分区索引也是可以建立在非分区表上的。
++ GLOBAL分区索引只能是prefix前缀的（索引分区键必须作为索引定义的第一列）。
 
 
 ### 二、转换规则
