--- a/ppas/20190314/20190314_01.md
+++ b/ppas/20190314/20190314_01.md
@@ -13,6 +13,33 @@
 
 + GLOBAL分区索引也是可以建立在非分区表上的。
 + GLOBAL分区索引只能是prefix前缀的（索引分区键必须作为索引定义的第一列）。
+```
+CREATE TABLE test (
+    id int,
+    name varchar2(20)
+)
+PARTITION BY RANGE (id) (
+    PARTITION p1 VALUES LESS THAN (10),
+    PARTITION p2 VALUES LESS THAN (20),
+    PARTITION p3 VALUES LESS THAN (maxvalue)
+);
+
+CREATE INDEX ig_test_id ON test(id)
+GLOBAL PARTITION BY RANGE (id) (
+    PARTITION p1 VALUES LESS THAN (5),
+    PARTITION p2 VALUES LESS THAN (30),
+    PARTITION p3 VALUES LESS THAN (maxvalue)
+);
+
+-- 通过 locality 判断索引是global 或者 local
+SQL> select index_name,table_name,locality from user_part_indexes where table_name='TEST';
+
+INDEX_NAME                     TABLE_NAME                     LOCALI
+------------------------------ ------------------------------ ------
+IG_TEST_ID                     TEST                           GLOBAL
+
+SQL> 
+```
 
 
 ### 二、转换规则
