--- a/ppas/20190314/20190314_01.md
+++ b/ppas/20190314/20190314_01.md
@@ -11,12 +11,16 @@
 4. 应用是OLTP & 用户需要快速响应   => global index
 5. 应用是DSS & 用户更关注于吞吐量   => local index
 
-+ GLOBAL分区索引也是可以建立在非分区表上的。
-+ GLOBAL分区索引只能是prefix前缀的（索引分区键必须作为索引定义的第一列）。
+**分区表索引分类**
++ 普通分区索引
++ 本地分区索引（LOCAL）
++ 全局分区索引 (GLOBAL)
+
 ```
 CREATE TABLE test (
     id int,
-    name varchar2(20)
+    name varchar2(20),
+    age int
 )
 PARTITION BY RANGE (id) (
     PARTITION p1 VALUES LESS THAN (10),
@@ -24,6 +28,44 @@ PARTITION BY RANGE (id) (
     PARTITION p3 VALUES LESS THAN (maxvalue)
 );
 
+-- 1. 普通分区索引
+SQL> create index idx_name on test(name);
+
+Index created.
+
+SQL> select index_name,table_name,status from user_indexes where table_name='TEST';
+
+INDEX_NAME                     TABLE_NAME                     STATUS
+------------------------------ ------------------------------ --------
+IDX_NAME                       TEST                           VALID
+
+SQL> select index_name,table_name,locality from user_part_indexes where table_name='TEST';
+
+SQL>
+
+-- 2. LOCAL分区索引
+SQL> create index idx_age on test(age) local;
+
+Index created.
+
+SQL> select index_name,table_name,status from user_indexes where table_name='TEST';
+
+INDEX_NAME                     TABLE_NAME                     STATUS
+------------------------------ ------------------------------ --------
+IDX_NAME                       TEST                           VALID
+IDX_AGE                        TEST                           N/A
+
+SQL> 
+
+SQL> select index_name,table_name,locality from user_part_indexes where table_name='TEST';
+
+INDEX_NAME                     TABLE_NAME                     LOCALI
+------------------------------ ------------------------------ ------
+IDX_AGE                        TEST                           LOCAL
+
+SQL> 
+
+-- 3. GLOBAL分区索引
 CREATE INDEX ig_test_id ON test(id)
 GLOBAL PARTITION BY RANGE (id) (
     PARTITION p1 VALUES LESS THAN (5),
@@ -31,14 +73,26 @@ GLOBAL PARTITION BY RANGE (id) (
     PARTITION p3 VALUES LESS THAN (maxvalue)
 );
 
+SQL> select index_name,table_name,status from user_indexes where table_name='TEST';
+
+INDEX_NAME                     TABLE_NAME                     STATUS
+------------------------------ ------------------------------ --------
+IG_TEST_ID                     TEST                           N/A
+IDX_NAME                       TEST                           VALID
+IDX_AGE                        TEST                           N/A
+
+SQL> 
+
 -- 通过 locality 判断索引是global 或者 local
 SQL> select index_name,table_name,locality from user_part_indexes where table_name='TEST';
 
 INDEX_NAME                     TABLE_NAME                     LOCALI
 ------------------------------ ------------------------------ ------
 IG_TEST_ID                     TEST                           GLOBAL
+IDX_AGE                        TEST                           LOCAL
 
 SQL> 
+
 ```
 
 
