--- a/ppas/20190314/20190314_01.md
+++ b/ppas/20190314/20190314_01.md
@@ -97,6 +97,51 @@ SQL>
 
 
 ### 二、转换规则
+1.**Oracle数据库**
+```
+SQL> CREATE TABLE tab_part_normal_index(
+  2      id number(2),
+  3      name varchar2(50),
+  4      age number(2),
+  5      constraint pk_tab_part_normal_index primary key(id)
+  6  )
+  7  PARTITION BY RANGE (id) (
+  8      PARTITION part_1 VALUES LESS THAN (5),
+  9      PARTITION part_2 VALUES LESS THAN (10)
+ 10  );
+
+Table created. 
+
+
+SQL> create unique index un_part_normal_index_name on tab_part_normal_index(name);
+
+Index created.
+
+SQL> 
+SQL> INSERT INTO tab_part_normal_index(id,name,age) VALUES(1,'aaa',1);
+
+1 row created.
+
+-- 1. 同一个分区中：必须唯一，不允许重复
+SQL> INSERT INTO tab_part_normal_index(id,name,age) VALUES(2,'aaa',2);
+INSERT INTO tab_part_normal_index(id,name,age) VALUES(2,'aaa',2)
+*
+ERROR at line 1:
+ORA-00001: unique constraint (ADAM.UN_PART_NORMAL_INDEX_NAME) violated
+
+
+-- 2. 不同分区中：必须唯一，不允许重复
+SQL> INSERT INTO tab_part_normal_index(id,name,age) VALUES(6,'aaa',6);
+INSERT INTO tab_part_normal_index(id,name,age) VALUES(6,'aaa',6)
+*
+ERROR at line 1:
+ORA-00001: unique constraint (ADAM.UN_PART_NORMAL_INDEX_NAME) violated
+
+SQL> 
+```
+
+2.**PPAS数据库**
+
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/E11882_01/server.112/e25523/partition.htm](https://docs.oracle.com/cd/E11882_01/server.112/e25523/partition.htm)
