--- a/ppas/20190314/20190314_01.md
+++ b/ppas/20190314/20190314_01.md
@@ -99,6 +99,7 @@ SQL>
 ### 二、转换规则
 1.**Oracle数据库**
 ```
+-- 分区表的普通索引的约束是全局的，对所有分区适用的，如：主键约束、唯一约束、唯一索引等
 SQL> CREATE TABLE tab_part_normal_index(
   2      id number(2),
   3      name varchar2(50),
