--- a/ppas/20190314/20190314_01.md
+++ b/ppas/20190314/20190314_01.md
@@ -142,6 +142,72 @@ SQL>
 ```
 
 2.**PPAS数据库**
+```
+edb=# CREATE TABLE tab_part_normal_index(
+edb(#     id number(2),
+edb(#     name varchar2(50),
+edb(#     age number(2),
+edb(#     constraint pk_tab_part_normal_index primary key(id)
+edb(# )
+edb-# PARTITION BY RANGE (id) (
+edb(#     PARTITION part_1 VALUES LESS THAN (5),
+edb(#     PARTITION part_2 VALUES LESS THAN (10)
+edb(# );
+CREATE TABLE
+
+-- 1. 不支持对分区表创建普通索引
+edb=# create unique index un_part_normal_index_name on tab_part_normal_index(name);
+错误:  cannot create index on partitioned table "tab_part_normal_index"
+edb=# 
+
+edb=# \d+ tab_part_normal_index
+                               Table "enterprisedb.tab_part_normal_index"
+ Column |         Type          | Collation | Nullable | Default | Storage  | Stats target | Description 
+--------+-----------------------+-----------+----------+---------+----------+--------------+-------------
+ id     | numeric(2,0)          |           | not null |         | main     |              | 
+ name   | character varying(50) |           |          |         | extended |              | 
+ age    | numeric(2,0)          |           |          |         | main     |              | 
+Partition key: RANGE (id) NULLS LAST
+Partitions: tab_part_normal_index_part_1 FOR VALUES FROM (MINVALUE) TO ('5'),
+            tab_part_normal_index_part_2 FOR VALUES FROM ('5') TO ('10')
+
+edb=# 
+
+-- 2. 需要对所有分区单独添加
+edb=# create unique index un_part_normal_index_name_1 on tab_part_normal_index_part_1(name);
+CREATE INDEX
+edb=# create unique index un_part_normal_index_name_2 on tab_part_normal_index_part_2(name);
+CREATE INDEX
+edb=# 
+
+edb=# select index_name,table_name,status from user_indexes where lower(table_name)  like 'tab_part_normal_index_part%' order by index_name;
+                      index_name                       |          table_name          | status 
+-------------------------------------------------------+------------------------------+--------
+ TAB_PART_NORMAL_INDEX_PART_1_PK_TAB_PART_NORMAL_INDEX | TAB_PART_NORMAL_INDEX_PART_1 | VALID    -- 主键生成的
+ TAB_PART_NORMAL_INDEX_PART_2_PK_TAB_PART_NORMAL_INDEX | TAB_PART_NORMAL_INDEX_PART_2 | VALID    -- 主键生成的
+ UN_PART_NORMAL_INDEX_NAME_1                           | TAB_PART_NORMAL_INDEX_PART_1 | VALID
+ UN_PART_NORMAL_INDEX_NAME_2                           | TAB_PART_NORMAL_INDEX_PART_2 | VALID
+(4 rows)
+
+edb=# 
+
+
+edb=# INSERT INTO tab_part_normal_index(id,name,age) VALUES(1,'aaa',1);
+INSERT 0 1
+
+-- 3. 同一分区：必须唯一，不允许重复
+edb=# INSERT INTO tab_part_normal_index(id,name,age) VALUES(2,'aaa',2);
+错误:  重复键违反唯一约束"un_part_normal_index_name_1"
+DETAIL:  键值"(name)=(aaa)" 已经存在
+edb=# 
+edb=# 
+-- 4. 不同分区：可以重复，这个和Oracle是有差异的
+edb=# INSERT INTO tab_part_normal_index(id,name,age) VALUES(6,'aaa',6);
+INSERT 0 1
+edb=# 
+edb=# 
+edb=# 
+```
 
 
 ### 三、参考链接
