--- a/ppas/20190314/20190314_01.md
+++ b/ppas/20190314/20190314_01.md
@@ -211,7 +211,7 @@ edb=#
 **总结（分区表普通GLOBAL索引）**：
 
 + 无约束限制：PPAS在每个分区单独创建即可。
-+ 有约束限制（如：唯一性）：非空和CHECK约束是全局的，需要在应用APP端保证唯一性，数据库的单个分区的索引只能起到优化作用。
++ 有约束限制（如：唯一性）：需要在应用APP端保证唯一性，数据库的单个分区的索引只能起到优化作用。（非空和CHECK约束是全局的）
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/E11882_01/server.112/e25523/partition.htm](https://docs.oracle.com/cd/E11882_01/server.112/e25523/partition.htm)
