--- a/ppas/20190226/20190226_01.md
+++ b/ppas/20190226/20190226_01.md
@@ -61,7 +61,7 @@ Oracle目前使用rowid主要有以下几个用途：
 -- oid：受参数default_with_oids=on 或者 create table (....) with oids; 控制。
 -- PPAS中：rowid 其实是oid的别名，而且受参数 default_with_rowids=on 参数控制。
 -- 
--- 1. Oracle案例
+-- 1. Oracle案例1
 SELECT id, 
        table_id,  
        gmt_create, 
@@ -76,7 +76,7 @@ FROM (
 )
 WHERE rownum <= 100000;
 
--- 2. PPAS案例
+-- 2. PPAS案例1
 SELECT id, 
        table_id,  
        gmt_create, 
@@ -91,6 +91,68 @@ FROM (
 )
 WHERE rownum <= 100000;
 
+
+-- 3.Oracle案例2
+-- 因为初始的表并没有设置OID和ROWID参数，因此也可以使用CTID进行替换
+SQL> SELECT * FROM scott.emp
+  2  WHERE ROWID IN(SELECT 
+  3      rid
+  4     FROM 
+  5  (SELECT
+  6      ROWID as rid,
+  7      ROW_NUMBER() OVER(PARTITION BY DEPTNO ORDER BY EMPNO) as rn
+  8   FROM scott.emp)
+  9   WHERE rn > 1)
+ 10   ORDER BY empno;
+
+     EMPNO ENAME      JOB              MGR HIREDATE                  SAL       COMM     DEPTNO
+---------- ---------- --------- ---------- ------------------ ---------- ---------- ----------
+      7521 WARD       SALESMAN        7698 22-FEB-81                1250        500         30
+      7566 JONES      MANAGER         7839 02-APR-81                2975                    20
+      7654 MARTIN     SALESMAN        7698 28-SEP-81                1250       1400         30
+      7698 BLAKE      MANAGER         7839 01-MAY-81                2850                    30
+      7788 SCOTT      ANALYST         7566 19-APR-87                3000                    20
+      7839 KING       PRESIDENT            17-NOV-81                5000                    10
+      7844 TURNER     SALESMAN        7698 08-SEP-81                1500          0         30
+      7876 ADAMS      CLERK           7788 23-MAY-87                1100                    20
+      7900 JAMES      CLERK           7698 03-DEC-81                 950                    30
+      7902 FORD       ANALYST         7566 03-DEC-81                3000                    20
+      7934 MILLER     CLERK           7782 23-JAN-82                1300                    10
+
+11 rows selected.
+
+SQL> 
+
+-- 4.PPAS案例2
+edb=# SELECT * FROM emp
+edb-# WHERE  CTID IN(SELECT   -- 使用CTID进行替换
+edb(#     rid
+edb(#    FROM 
+edb(# (SELECT
+edb(#     CTID as rid,
+edb(#     ROW_NUMBER() OVER(PARTITION BY DEPTNO ORDER BY EMPNO) as rn
+edb(#  FROM emp)
+edb(#  WHERE rn > 1)
+edb-# 
+edb-# 
+edb-# 
+edb-# ;
+ empno | ename  |    job    | mgr  |      hiredate      |   sal   |  comm   | deptno 
+-------+--------+-----------+------+--------------------+---------+---------+--------
+  7521 | WARD   | SALESMAN  | 7698 | 22-FEB-81 00:00:00 | 1250.00 |  500.00 |     30
+  7566 | JONES  | MANAGER   | 7839 | 02-APR-81 00:00:00 | 2975.00 |         |     20
+  7654 | MARTIN | SALESMAN  | 7698 | 28-SEP-81 00:00:00 | 1250.00 | 1400.00 |     30
+  7698 | BLAKE  | MANAGER   | 7839 | 01-MAY-81 00:00:00 | 2850.00 |         |     30
+  7788 | SCOTT  | ANALYST   | 7566 | 19-APR-87 00:00:00 | 3000.00 |         |     20
+  7839 | KING   | PRESIDENT |      | 17-NOV-81 00:00:00 | 5000.00 |         |     10
+  7844 | TURNER | SALESMAN  | 7698 | 08-SEP-81 00:00:00 | 1500.00 |    0.00 |     30
+  7876 | ADAMS  | CLERK     | 7788 | 23-MAY-87 00:00:00 | 1100.00 |         |     20
+  7900 | JAMES  | CLERK     | 7698 | 03-DEC-81 00:00:00 |  950.00 |         |     30
+  7902 | FORD   | ANALYST   | 7566 | 03-DEC-81 00:00:00 | 3000.00 |         |     20
+  7934 | MILLER | CLERK     | 7782 | 23-JAN-82 00:00:00 | 1300.00 |         |     10
+(11 rows)
+
+edb=# 
 ```
 
 **注意：通过rowid来达到唯一性，并不稳妥，毕竟rowid是会变化的，因此还是建议使用能唯一标示的值进行替换**
