--- a/ppas/20180628/20180628_01.md
+++ b/ppas/20180628/20180628_01.md
@@ -194,6 +194,50 @@ postgres=# select * from pg_get_keywords();
 |149|XMLSERIALIZE	 |       non-reserved (cannot be function or type)		 
 |150|XMLTABLE	     |       non-reserved (cannot be function or type)
 
+```
+-- 1. Oracle数据库
+SQL> CREATE OR REPLACE PROCEDURE prog_key_word(
+  2      dt date,
+  3      user varchar2)
+  4  is  
+  5  begin
+  6      dbms_output.put_line('key word');
+  7  end;
+  8  /
+
+Procedure created.
+
+SQL> 
+
+
+-- 2. PPAS数据库
+edb=# CREATE OR REPLACE PROCEDURE prog_key_word(
+edb(#     dt date,
+edb(#     user varchar2)
+edb-# is  
+edb$# begin
+edb$#     dbms_output.put_line('key word');
+edb$# end;
+错误:  语法错误 在 "user" 或附近的
+LINE 3:     user varchar2)
+            ^
+edb=# 
+edb=# 
+
+edb=# CREATE OR REPLACE PROCEDURE prog_key_word(
+edb(#     dt date,
+edb(#     user1 varchar2)
+edb-# is  
+edb$# begin
+edb$#     dbms_output.put_line('key word');
+edb$# end;
+CREATE PROCEDURE
+edb=# 
+
+
+-- user是关键字，需要对其进行更名，但是依赖和调用的地方也需要做相应的修改。
+```
+
 2. **PPAS/PG关键字列表**
 + [PostgreSQL9.6 关键字](https://www.postgresql.org/docs/9.6/static/sql-keywords-appendix.html) 
 + [PostgreSQL10 关键字](https://www.postgresql.org/docs/10/static/sql-keywords-appendix.html)
