--- a/ppas/20190315/20190315_01.md
+++ b/ppas/20190315/20190315_01.md
@@ -2,10 +2,34 @@
 ---
 
 ### 一、背景介绍
+GOTO语句无条件地分支到语句标签或块标签。 label是给一个指定的执行语句命名，该名称在function,procedure 或者 anonymous block 必须唯一。并且必须在可执行语句或PL/SQL块之前。GOTO语句将控制转移到带标签的语句或块。GOTO语句不能分支到IF语句，LOOP语句或子块。 要分支到没有可执行语句的位置，请添加NULL语句。
+
+**Label定义**
+```
+  << label_name >>
   
+-- 1. labeled anonymous blocks
+An anonymous block label included prior to the DECLARE keyword if a declaration section exists, or prior to the BEGIN keyword if there is no declaration section.
+语法：
+<< label_anonymous_block >>
+BEGIN
+    NULL;
+END label_anonymous_block;
+
+```
+**GOTO 语句**
+```
+  GOTO label_name;
+```
+
+
+
+
 
 ### 二、转换规则
 
 ### 三、参考链接
 1.[https://www.oreilly.com/library/view/oracle-plsql-programming/9780596805401/ch03s08.html](https://www.oreilly.com/library/view/oracle-plsql-programming/9780596805401/ch03s08.html)
-
+2.[https://docs.oracle.com/cd/B19306_01/appdev.102/b14261/controlstructures.htm#BABDBCFF](https://docs.oracle.com/cd/B19306_01/appdev.102/b14261/controlstructures.htm#BABDBCFF)
+3.[https://www.enterprisedb.com/docs/en/9.2/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.132.html](https://www.enterprisedb.com/docs/en/9.2/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.132.html)
+4.[https://www.postgresql.org/docs/current/plpgsql-structure.html](https://www.postgresql.org/docs/current/plpgsql-structure.html)
