--- a/ppas/20190315/20190315_01.md
+++ b/ppas/20190315/20190315_01.md
@@ -17,6 +17,31 @@ BEGIN
 END label_anonymous_block;
 
 ```
+label可以是 指定语句、任意SQL语句(如： INSERT, UPDATE, CREATE等) 、选择的PL/SQL语句。可以被label的PL/SQL语句主要有:
+```
+IF
+EXIT
+RETURN
+RAISE
+EXECUTE
+PERFORM
+GET DIAGNOSTICS
+OPEN
+FETCH
+MOVE
+CLOSE
+NULL
+COMMIT
+ROLLBACK
+GOTO
+CASE
+LOOP
+WHILE
+FOR
+```
+
+
+
 **GOTO 语句**
 ```
   GOTO label_name;
