--- a/ppas/20190315/20190315_01.md
+++ b/ppas/20190315/20190315_01.md
@@ -16,6 +16,12 @@ BEGIN
     NULL;
 END label_anonymous_block;
 
+-- 2. NULL Statement：啥也不做的可执行语句，仅仅把控制传递到下一个语句
+语法：
+BEGIN
+    NULL;
+END;
+
 ```
 label可以是 指定语句、任意SQL语句(如： INSERT, UPDATE, CREATE等) 、选择的PL/SQL语句。可以被label的PL/SQL语句主要有:
 ```
@@ -53,8 +59,13 @@ FOR
 
 ### 二、转换规则
 
+
+
+
+
 ### 三、参考链接
 1.[https://www.oreilly.com/library/view/oracle-plsql-programming/9780596805401/ch03s08.html](https://www.oreilly.com/library/view/oracle-plsql-programming/9780596805401/ch03s08.html)
 2.[https://docs.oracle.com/cd/B19306_01/appdev.102/b14261/controlstructures.htm#BABDBCFF](https://docs.oracle.com/cd/B19306_01/appdev.102/b14261/controlstructures.htm#BABDBCFF)
 3.[https://www.enterprisedb.com/docs/en/9.2/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.132.html](https://www.enterprisedb.com/docs/en/9.2/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.132.html)
 4.[https://www.postgresql.org/docs/current/plpgsql-structure.html](https://www.postgresql.org/docs/current/plpgsql-structure.html)
+5.[https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/controlstatements.htm#LNPLS435](https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/controlstatements.htm#LNPLS435)
