--- a/ppas/20190315/20190315_01.md
+++ b/ppas/20190315/20190315_01.md
@@ -58,8 +58,64 @@ FOR
 
 
 ### 二、转换规则
+1.**Oracle数据库**
+```
+CREATE OR REPLACE PROCEDURE proc_plsql_label
+AS
+BEGIN
+    DECLARE    
+    BEGIN
+        BEGIN
+            
+                << bottom_of_loop >>
+                BEGIN
+                    NULL;
+                END bottom_of_loop;
 
+                dbms_output.put_line('plsql labels');
 
+        END;
+    END;
+END;
+/
+
+SQL> set serveroutput on
+SQL> exec proc_plsql_label;
+plsql labels
+
+PL/SQL procedure successfully completed.
+
+SQL> 
+```
+
+2.**PPAS数据库**
+```
+
+CREATE OR REPLACE PROCEDURE proc_plsql_label
+AS
+BEGIN
+    DECLARE    
+    BEGIN
+        BEGIN
+            
+                << bottom_of_loop >>
+                BEGIN
+                    NULL;
+                END;  -- END后面不需要自定义的label名称：bottom_of_loop
+
+                dbms_output.put_line('plsql labels');
+
+        END;
+    END;
+END;
+
+edb=# exec proc_plsql_label;
+plsql labels
+
+EDB-SPL Procedure successfully completed
+edb=# 
+
+```
 
 
 
