--- a/ppas/20190315/20190315_01.md
+++ b/ppas/20190315/20190315_01.md
@@ -74,7 +74,7 @@ BEGIN
             
                 << bottom_of_loop >>
                 BEGIN
-                    NULL;
+                    NULL;  -- NULL Statement
                 END bottom_of_loop;
 
                 dbms_output.put_line('plsql labels');
