--- a/ppas/20190317/20190317_01.md
+++ b/ppas/20190317/20190317_01.md
@@ -2,7 +2,123 @@
 ---
 
 ### 一、背景介绍
+Oracle Row Generator Techniques 通常是使用Oracle的层次查询来快速产生的，主要的语法格式如下：
+```
+-- 1. ROWNUM
+  select rownum
+    from dual
+  connect by rownum <= num;
+
+
+-- 2. LEVEL
+  select level
+    from dual 
+  connect by level <= num;
+```
 
 ### 二、转换规则
+1. **Oracle数据库**
+```
+-- 案例：生成10连续数，并左边用0填充
+-- 方法1：rownum
+SQL> select lpad(rownum,2,'0') as item_id
+  2    from dual
+  3  connect by rownum <= 10;
+
+ITEM_ID
+--------
+01
+02
+03
+04
+05
+06
+07
+08
+09
+10
+
+10 rows selected.
+
+SQL> 
+
+-- 2. 方法2：level
+SQL> select lpad(level,2,'0') as item_id
+  2    from dual
+  3  connect by level <= 10;
+
+ITEM_ID
+--------
+01
+02
+03
+04
+05
+06
+07
+08
+09
+10
+
+10 rows selected.
+
+SQL> 
+
+SQL> select lpad(level,2,'0') as item_id
+  2    from dual
+  3  connect by prior level <= 10;
+connect by prior level <= 10  -- Oracle不允许添加 prior
+                 *
+ERROR at line 3:
+ORA-00976: Specified pseudocolumn or operator not allowed here.
+
+
+SQL> 
+```
+
+2. **PPAS数据库**
+```
+-- 方法1：level，且必须添加prior
+edb=# select lpad(level,2,'0') as item_id
+edb-#   from dual
+edb-# connect by prior level <= 10;
+ item_id 
+---------
+ 01
+ 02
+ 03
+ 04
+ 05
+ 06
+ 07
+ 08
+ 09
+ 10
+(10 rows)
+
+edb=# 
+
+-- 方法2：generate_series 函数
+edb=# select lpad(i,2,'0') as item_id
+edb-#   from generate_series(1, 10) i;
+ item_id 
+---------
+ 01
+ 02
+ 03
+ 04
+ 05
+ 06
+ 07
+ 08
+ 09
+ 10
+(10 rows)
+
+edb=# 
+
+```
 
 ### 三、参考链接
+1.[http://www.orafaq.com/wiki/Oracle_Row_Generator_Techniques](http://www.orafaq.com/wiki/Oracle_Row_Generator_Techniques)
+2.[https://www.postgresql.org/docs/10/functions-srf.html](https://www.postgresql.org/docs/10/functions-srf.html)
