--- a/ppas/20190317/20190317_01.md
+++ b/ppas/20190317/20190317_01.md
@@ -1,4 +1,4 @@
-## Oracle PPAS 兼容性分析 之 Hierarchical Queries 层次查询《1》：CONNECT BY ROWNUM 批量生成数据
+## Oracle PPAS 兼容性分析 之 Hierarchical Queries 层次查询《1》：CONNECT BY ROWNUM - Row Generator Techniques
 ---
 
 ### 一、背景介绍
