--- a/ppas/20190317/20190317_02.md
+++ b/ppas/20190317/20190317_02.md
@@ -2,12 +2,16 @@
 ---
 
 ### 一、背景介绍
+SAVEPOINT 语句命名并标记处理事务的当前点，使用ROLLBACK TO语句，保存点将撤消部分事务而不是整个事务。SQL SAVEPOINT语句可以作为静态SQL嵌入到PL/SQL中。
 
 基本语法：
 ```
+-- 建立保存点
+SAVEPOINT savepoint_name;
 
+-- 回滚保存点
+ROLLBACK [ WORK | TRANSACTION ] TO [ SAVEPOINT ] savepoint_name;
 ```
-
 
 ### 二、转换规则
 
