--- a/ppas/20190317/20190317_02.md
+++ b/ppas/20190317/20190317_02.md
@@ -63,7 +63,33 @@ SQL>
 2.**PPAS数据库**
 
 **注意：PPAS 的 SPL 程序 不支持 ROLLBACK TO SAVEPOINT 语法。**
+```
+-- 可以通过 BEING ... EXCEPTION ... END; 单独开启一个事务来进行处理 
+edb=# DECLARE
+edb-#    emp_id     emp.empno%TYPE;
+edb$#    emp_ename  emp.ename%TYPE;
+edb$#    emp_sal    emp.sal%TYPE;
+edb$# BEGIN
+edb$#    SELECT empno, ename, sal INTO emp_id, emp_ename,emp_sal 
+edb$#      FROM emp 
+edb$#     WHERE empno = 7788;
+edb$# 
+edb$#    UPDATE emp_test SET sal = sal * 1.1 WHERE empno = emp_id;
+edb$# 
+edb$#    DELETE FROM emp_test WHERE empno = 7900;
+edb$#    -- open new transacton handle savepoint 
+edb$#    BEGIN 
+edb$#       INSERT INTO emp_test VALUES (emp_id, emp_ename, emp_sal);
+edb$#    EXCEPTION
+edb$#       WHEN DUP_VAL_ON_INDEX THEN NULL;
+edb$#       DBMS_OUTPUT.PUT_LINE('Insert has been rolled back');
+edb$#    END;
+edb$# END;
+Insert has been rolled back
 
+EDB-SPL Procedure successfully completed
+edb=# 
+```
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/B19306_01/appdev.102/b14261/savepoint_statement.htm](https://docs.oracle.com/cd/B19306_01/appdev.102/b14261/savepoint_statement.htm)
