--- a/ppas/20190317/20190317_03.md
+++ b/ppas/20190317/20190317_03.md
@@ -2,10 +2,120 @@
 ---
 
 ### 一、背景介绍
-Oracle的UPDATE语句支持 UPDATE(subquery) SET的语法。
-
+Oracle的UPDATE语句支持 UPDATE(subquery) SET的语法。仅仅对只满足子查询条件的行记录进行 update 操作。
 
 ### 二、转换规则
+1.**Oracle数据库**
+```
+SQL> create table emp_test as select * from emp;
+
+Table created.
+
+-- 表必须有保留键值，否则 。报 ORA-01779: cannot modify a column which maps to a non key-preserved table.错误。
+
+SQL> alter table emp_test add constraint pk_emp_test primary key(empno);
+
+Table altered.
+
+SQL> select * from emp_test;
+
+     EMPNO ENAME      JOB              MGR HIREDATE                  SAL       COMM     DEPTNO
+---------- ---------- --------- ---------- ------------------ ---------- ---------- ----------
+      7369 SMITH      CLERK           7902 17-DEC-80                 800                    20
+      7499 ALLEN      SALESMAN        7698 20-FEB-81                1600        300         30
+      7521 WARD       SALESMAN        7698 22-FEB-81                1250        500         30
+      7566 JONES      MANAGER         7839 02-APR-81                2975                    20
+      7654 MARTIN     SALESMAN        7698 28-SEP-81                1250       1400         30
+      7698 BLAKE      MANAGER         7839 01-MAY-81                2850                    30
+      7782 CLARK      MANAGER         7839 09-JUN-81                2450                    10
+      7788 SCOTT      ANALYST         7566 19-APR-87               13000                    20
+      7839 KING       PRESIDENT            17-NOV-81                5000                    10
+      7844 TURNER     SALESMAN        7698 08-SEP-81                1500          0         30
+      7876 ADAMS      CLERK           7788 23-MAY-87                1100                    20
+      7900 JAMES      CLERK           7698 03-DEC-81                 950                    30
+      7902 FORD       ANALYST         7566 03-DEC-81                3000                    20
+      7934 MILLER     CLERK           7782 23-JAN-82                1300                    10
+
+14 rows selected.
+
+SQL> 
+
+SQL> select a.empno,
+  2         a.ename,
+  3         a.comm,
+  4         a.job,
+  5         b.ename as b_ename,
+  6         b.job as b_job
+  7    from emp_test a,
+  8         emp_test b
+  9   where a.mgr = b.empno;
+
+     EMPNO ENAME            COMM JOB       B_ENAME    B_JOB
+---------- ---------- ---------- --------- ---------- ---------
+      7902 FORD                  ANALYST   JONES      MANAGER
+      7788 SCOTT                 ANALYST   JONES      MANAGER
+      7900 JAMES                 CLERK     BLAKE      MANAGER
+      7844 TURNER              0 SALESMAN  BLAKE      MANAGER
+      7654 MARTIN           1400 SALESMAN  BLAKE      MANAGER
+      7521 WARD              500 SALESMAN  BLAKE      MANAGER
+      7499 ALLEN             300 SALESMAN  BLAKE      MANAGER
+      7934 MILLER                CLERK     CLARK      MANAGER
+      7876 ADAMS                 CLERK     SCOTT      ANALYST
+      7782 CLARK                 MANAGER   KING       PRESIDENT
+      7698 BLAKE                 MANAGER   KING       PRESIDENT
+      7566 JONES                 MANAGER   KING       PRESIDENT
+      7369 SMITH                 CLERK     FORD       ANALYST
+
+13 rows selected.
+
+SQL> 
+
+
+SQL> UPDATE 
+  2  (select a.empno,
+  3         a.ename,
+  4         a.comm,
+  5         a.job,
+  6         b.ename as b_ename,
+  7         b.job as b_job
+  8     from emp_test a,
+  9         emp_test b
+ 10   where a.mgr = b.empno)
+ 11  SET 
+ 12      comm = 10001,
+ 13      ename =  b_ename || '->' ;
+
+13 rows updated.
+
+SQL>
+
+SQL> select * from emp_test;
+
+     EMPNO ENAME      JOB              MGR HIREDATE                  SAL       COMM     DEPTNO
+---------- ---------- --------- ---------- ------------------ ---------- ---------- ----------
+      7369 FORD->     CLERK           7902 17-DEC-80                 800      10001         20
+      7499 BLAKE->    SALESMAN        7698 20-FEB-81                1600      10001         30
+      7521 BLAKE->    SALESMAN        7698 22-FEB-81                1250      10001         30
+      7566 KING->     MANAGER         7839 02-APR-81                2975      10001         20
+      7654 BLAKE->    SALESMAN        7698 28-SEP-81                1250      10001         30
+      7698 KING->     MANAGER         7839 01-MAY-81                2850      10001         30
+      7782 KING->     MANAGER         7839 09-JUN-81                2450      10001         10
+      7788 JONES->    ANALYST         7566 19-APR-87               13000      10001         20
+      7839 KING       PRESIDENT            17-NOV-81                5000                    10
+      7844 BLAKE->    SALESMAN        7698 08-SEP-81                1500      10001         30
+      7876 SCOTT->    CLERK           7788 23-MAY-87                1100      10001         20
+      7900 BLAKE->    CLERK           7698 03-DEC-81                 950      10001         30
+      7902 JONES->    ANALYST         7566 03-DEC-81                3000      10001         20
+      7934 CLARK->    CLERK           7782 23-JAN-82                1300      10001         10
+
+14 rows selected.
+
+SQL> 
+
+```
+
+2.**PPAS数据库**
+
 
 
 ### 三、参考链接
