--- a/ppas/20190317/20190317_03.md
+++ b/ppas/20190317/20190317_03.md
@@ -111,6 +111,38 @@ SQL> select * from emp_test;
 14 rows selected.
 
 SQL> 
+-- 和merge into语法相等价
+SQL>  merge into emp_test a
+  2   using emp_test b 
+  3   on (a.mgr = b.empno)
+  4   when matched then
+  5     update set a.comm = 10001,
+  6            a.ename = b.ename || '->';
+
+13 rows merged.
+
+SQL> select * from emp_test;
+
+     EMPNO ENAME      JOB              MGR HIREDATE                  SAL       COMM     DEPTNO
+---------- ---------- --------- ---------- ------------------ ---------- ---------- ----------
+      7369 FORD->     CLERK           7902 17-DEC-80                 800      10001         20
+      7499 BLAKE->    SALESMAN        7698 20-FEB-81                1600      10001         30
+      7521 BLAKE->    SALESMAN        7698 22-FEB-81                1250      10001         30
+      7566 KING->     MANAGER         7839 02-APR-81                2975      10001         20
+      7654 BLAKE->    SALESMAN        7698 28-SEP-81                1250      10001         30
+      7698 KING->     MANAGER         7839 01-MAY-81                2850      10001         30
+      7782 KING->     MANAGER         7839 09-JUN-81                2450      10001         10
+      7788 JONES->    ANALYST         7566 19-APR-87               13000      10001         20
+      7839 KING       PRESIDENT            17-NOV-81                5000                    10
+      7844 BLAKE->    SALESMAN        7698 08-SEP-81                1500      10001         30
+      7876 SCOTT->    CLERK           7788 23-MAY-87                1100      10001         20
+      7900 BLAKE->    CLERK           7698 03-DEC-81                 950      10001         30
+      7902 JONES->    ANALYST         7566 03-DEC-81                3000      10001         20
+      7934 CLARK->    CLERK           7782 23-JAN-82                1300      10001         10
+
+14 rows selected.
+
+SQL> 
 
 ```
 
