--- a/ppas/20190317/20190317_03.md
+++ b/ppas/20190317/20190317_03.md
@@ -2,7 +2,7 @@
 ---
 
 ### 一、背景介绍
-Oracle的UPDATE语句支持 UPDATE(subquery) SET的语法。仅仅对只满足子查询条件的行记录进行 update 操作。
+Oracle的UPDATE语句支持 UPDATE(subquery) SET的语法。仅仅对只满足子查询条件的行记录进行 update 操作。而PPAS/PG不支持该语法，因此需要对SQL进行改写。
 
 ### 二、转换规则
 1.**Oracle数据库**
