--- a/ppas/20190317/20190317_03.md
+++ b/ppas/20190317/20190317_03.md
@@ -148,10 +148,37 @@ SQL>
 
 2.**PPAS数据库**
 ```
--- 1. WITH Queries (CTE)
+-- 改写SQL
+edb=# update emp_test t set t.comm = 10001, t.ename = (select b.ename || '->'
+edb(#    from emp_test a,
+edb(#        emp_test b
+edb(#  where a.mgr = b.empno 
+edb(#    and a.empno = t.empno)
+edb-#  where empno in (select a.empno from emp_test a,
+edb(#        emp_test b
+edb(#  where a.mgr = b.empno 
+edb(#    and a.empno = t.empno);
+UPDATE 13
+edb=# select * from emp_test;
+ empno |  ename  |    job    | mgr  |      hiredate      |   sal   |   comm   | deptno 
+-------+---------+-----------+------+--------------------+---------+----------+--------
+  7839 | KING    | PRESIDENT |      | 17-NOV-81 00:00:00 | 5000.00 |          |     10
+  7369 | FORD->  | CLERK     | 7902 | 17-DEC-80 00:00:00 |  800.00 | 10001.00 |     20
+  7499 | BLAKE-> | SALESMAN  | 7698 | 20-FEB-81 00:00:00 | 1600.00 | 10001.00 |     30
+  7521 | BLAKE-> | SALESMAN  | 7698 | 22-FEB-81 00:00:00 | 1250.00 | 10001.00 |     30
+  7566 | KING->  | MANAGER   | 7839 | 02-APR-81 00:00:00 | 2975.00 | 10001.00 |     20
+  7654 | BLAKE-> | SALESMAN  | 7698 | 28-SEP-81 00:00:00 | 1250.00 | 10001.00 |     30
+  7698 | KING->  | MANAGER   | 7839 | 01-MAY-81 00:00:00 | 2850.00 | 10001.00 |     30
+  7782 | KING->  | MANAGER   | 7839 | 09-JUN-81 00:00:00 | 2450.00 | 10001.00 |     10
+  7788 | JONES-> | ANALYST   | 7566 | 19-APR-87 00:00:00 | 3000.00 | 10001.00 |     20
+  7844 | BLAKE-> | SALESMAN  | 7698 | 08-SEP-81 00:00:00 | 1500.00 | 10001.00 |     30
+  7876 | SCOTT-> | CLERK     | 7788 | 23-MAY-87 00:00:00 | 1100.00 | 10001.00 |     20
+  7900 | BLAKE-> | CLERK     | 7698 | 03-DEC-81 00:00:00 |  950.00 | 10001.00 |     30
+  7902 | JONES-> | ANALYST   | 7566 | 03-DEC-81 00:00:00 | 3000.00 | 10001.00 |     20
+  7934 | CLARK-> | CLERK     | 7782 | 23-JAN-82 00:00:00 | 1300.00 | 10001.00 |     10
+(14 rows)
 
-
-
+edb=# 
 
 
 ```
