--- a/ppas/20190317/20190317_04.md
+++ b/ppas/20190317/20190317_04.md
@@ -2,6 +2,12 @@
 ---
 
 ### 一、背景介绍
+WHEN (condition) ：满足指定条件的行才执行trigger_body，否则不执行，statement触发器不受此条件限制。condition 可以包括NEW, OLD, 或 PARENT名，但是不要在其前面添加冒号（:）。
+
+**WHEN (condition)的限制**：
++ 必须是for each row。
++ 必须指定 BEFORE EACH ROW、AFTER EACH ROW、INSTEAD OF EACH ROW 其中之一。
++ condition不能包含subquery 或者 PL/SQL 表达式。
 
 ### 二、转换规则
 
