--- a/ppas/20190317/20190317_04.md
+++ b/ppas/20190317/20190317_04.md
@@ -10,5 +10,15 @@ WHEN (condition) ：满足指定条件的行才执行trigger_body，否则不执
 + condition不能包含subquery 或者 PL/SQL 表达式。
 
 ### 二、转换规则
+1.**Oracle数据库**
+```
+```
+
+
+2.**PPAS数据库**
+```
+```
 
 ### 三、参考链接
+1.[https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/create_trigger.htm#CIHBJHFE](https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/create_trigger.htm#CIHBJHFE)
+2.[]()
