--- a/ppas/20190317/20190317_04.md
+++ b/ppas/20190317/20190317_04.md
@@ -16,7 +16,9 @@ WHEN (condition) ：满足指定条件的行才执行trigger_body，否则不执
 
 
 2.**PPAS数据库**
+**注意：INSERT triggers cannot refer to OLD and DELETE triggers cannot refer to NEW.**
 ```
+
 ```
 
 ### 三、参考链接
