--- a/ppas/20190317/20190317_04.md
+++ b/ppas/20190317/20190317_04.md
@@ -12,6 +12,21 @@ WHEN (condition) ：满足指定条件的行才执行trigger_body，否则不执
 ### 二、转换规则
 1.**Oracle数据库**
 ```
+CREATE OR REPLACE TRIGGER trig_delete_new 
+after insert or delete or update of empno,ename,job,hiredate,sal,deptno
+on emp_test 
+for each row
+WHEN(new.deptno=10 and old.comm is null)
+begin
+	IF inserting THEN
+ 	 	dbms_output.put_line('inserting...');
+ 	ELSIF deleting THEN
+ 		dbms_output.put_line('deleting...');
+ 	ELSIF updating THEN
+		dbms_output.put_line('updating...');
+    END IF;
+end;
+/
 ```
 
 
@@ -19,8 +34,56 @@ WHEN (condition) ：满足指定条件的行才执行trigger_body，否则不执
 
 **注意：INSERT triggers cannot refer to OLD and DELETE triggers cannot refer to NEW.**
 ```
+-- 1. insert触发器
+CREATE OR REPLACE TRIGGER trig_delete_new_insert
+after insert 
+on emp_test 
+for each row
+begin
+	IF inserting THEN
+ 	 	dbms_output.put_line('inserting...');
+ 	ELSIF deleting THEN
+ 		dbms_output.put_line('deleting...');
+ 	ELSIF updating THEN
+		dbms_output.put_line('updating...');
+    END IF;
+end;
+/
 
+-- 2. delete触发器
+CREATE OR REPLACE TRIGGER trig_delete_new_delete
+after delete 
+on emp_test 
+for each row
+begin
+	IF inserting THEN
+ 	 	dbms_output.put_line('inserting...');
+ 	ELSIF deleting THEN
+ 		dbms_output.put_line('deleting...');
+ 	ELSIF updating THEN
+		dbms_output.put_line('updating...');
+    END IF;
+end;
+/
+
+-- 3. update触发器
+CREATE OR REPLACE TRIGGER trig_delete_new_update
+after update of empno,ename,job,hiredate,sal,deptno 
+on emp_test 
+for each row
+WHEN(new.deptno=10 and old.comm is null)
+begin
+	IF inserting THEN
+ 	 	dbms_output.put_line('inserting...');
+ 	ELSIF deleting THEN
+ 		dbms_output.put_line('deleting...');
+ 	ELSIF updating THEN
+		dbms_output.put_line('updating...');
+    END IF;
+end;
+/
 ```
+**注意：依据具体的WHEN(condition) 拆分成insert、update、delete触发器。**
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/create_trigger.htm#CIHBJHFE](https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/create_trigger.htm#CIHBJHFE)
