--- a/ppas/20190320/20190320_01.md
+++ b/ppas/20190320/20190320_01.md
@@ -2,7 +2,7 @@
 ---
 
 ### 一、背景介绍
-1.**隐式了类型转换**：是自动的将一种数据类型转换为另外一种数据类型。Oracle默认支持的转换规则如下：
+1.**隐式类型转换**：是自动的将一种数据类型转换为另外一种数据类型。Oracle默认支持的转换规则如下：
 
 
 
