--- a/ppas/20190320/20190320_01.md
+++ b/ppas/20190320/20190320_01.md
@@ -2,14 +2,18 @@
 ---
 
 ### 一、背景介绍
-1.**隐式类型转换**：是自动的将一种数据类型转换为另外一种数据类型。Oracle默认支持的转换规则如下：
-+ 1111
+1.**隐式类型转换**：是自动的将一种数据类型转换为另外一种数据类型。Oracle 总是把 Character 转换为Numeric ，以及  Character 转换为Date。Oracle默认支持的转换规则如下：
+
++ 隐式类型转换矩阵
+
 
 + 不同字符类型转换
-
-
-
-
+|                | to CHAR   | to VARCHAR2 | to NCHAR  | to NVARCHAR2  |
+|:------         | :------   | :------     | :------   | :------       |
+| from CHAR      |  --       | VARCHAR2    | NCHAR     | NVARCHAR2     |
+| from VARCHAR2  | VARCHAR2  | --          | NVARCHAR2 | NVARCHAR2     |
+| from NCHAR     | NCHAR     | NCHAR       | --        | NVARCHAR2     |
+| from NVARCHAR2 | NVARCHAR2 | NVARCHAR2   | NVARCHAR2 | --            |
 
 
 2.**显示类型转换**：
