--- a/ppas/20190320/20190320_01.md
+++ b/ppas/20190320/20190320_01.md
@@ -6,6 +6,23 @@
 
 + 隐式类型转换矩阵
 
+|        |CHAR    |VARCHAR2|NCHAR   |NVARCHAR2|DATE    |DATETIME/INTERVAL|NUMBER  |BINARY_FLOAT|BINARY_DOUBLE|LONG    |RAW     |ROWID   |CLOB    |BLOB    |NCLOB   |
+|:------:|:------:|:------:|:------:|:------: |:------:|:------:         |:------:|:------:    |:------:     |:------:|:------:|:------:|:------:|:------:|:------:| 
+|CHAR    |--|	X|	X|	X|	X|	X|	X|	X|	X|	X|	X|	--|	X|	X|	X|
+|VARCHAR2|X|	--|	X|	X|	X|	X|	X|	X|	X|	X|	X|	X|	X| --|X|
+|NCHAR   |X|	X|	--|	X|	X|	X|	X|	X|	X|	X|	X|	X|	X|	--|	X|
+|NVARCHAR2|X|	X|	X|	--|	X|	X|	X|	X|	X|	X|	X|	X|	X|	--|	X|
+|DATE|X|	X|	X|	X|	--|	--|	--|	--|	--|	--|	--|	--|	--|	--|	--|
+|DATETIME/INTERVAL|X|	X|	X|	X|	--|	--|	--|	--|	--|	X|	--|	--|	--|	--|	--|
+|NUMBER|X|	X|	X|	X|	--|	--|	--|	X|	X|	--|	--|	--|	--|	--|	--|
+|BINARY_FLOAT|X|	X|	X|	X|	--|	--|	X|	--|	X|	--|	--|	--|	--|	--|	--|
+|BINARY_DOUBLE|X|	X|	X|	X|	--|	--|	X|	X|	--|	--|	--|	--|	--|	--|	--|
+|LONG|X|	X|	X|	X|	--|	X|	--|	--|	--|	--|	X|	--|	X|	--|	X|
+|RAW|X|	X|	X|	X|	--|	--|	--|	--|	--|	X|	--|	--|	--|	X|	--|
+|ROWID|--|	X|	X|	X|	--|	--|	--|	--|	--|	--|	--|	--|	--|	--|	--|
+|CLOB|X|	X|	X|	X|	--|	--|	--|	--|	--|	X|	--|	--|	--|	--|	X|
+|BLOB|--|	--|	--|	--|	--|	--|	--|	--|	--|	--|	X|	--|	--|	--|	--|
+|NCLOB|X|	X|	X|	X|	--|	--|	--|	--|	--|	X|	--|	--|	X|	--|	--|
 
 + 不同字符类型转换
 
