--- a/ppas/20190322/20190322_01.md
+++ b/ppas/20190322/20190322_01.md
@@ -2,8 +2,15 @@
 ---
 
 ### 一、背景介绍
+Oracle表的列的数据类型可以是自定义的数据类型（UDT）。
+
+
 
 ### 二、转换规则
+
+
+
+
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/E18283_01/appdev.112/e11822/adobjcol.htm](https://docs.oracle.com/cd/E18283_01/appdev.112/e11822/adobjcol.htm)
