--- a/ppas/20190322/20190322_01.md
+++ b/ppas/20190322/20190322_01.md
@@ -2,8 +2,7 @@
 ---
 
 ### 一、背景介绍
-Oracle表的列的数据类型可以是自定义的数据类型（UDT）。
-
+Oracle表的列的数据类型可以是自定义的数据类型（UDT）。Oracle支持varray和嵌套表集合数据类型。其中，varray是有序的元素集合；嵌套表可以包含任意数量的元素，并且是无序的。这里仅仅介绍VARRAY自定义类型，嵌套表（Nested Table）和多维集合（Multilevel Collections）暂不考虑。
 
 
 ### 二、转换规则
