--- a/ppas/20190322/20190322_01.md
+++ b/ppas/20190322/20190322_01.md
@@ -2,7 +2,12 @@
 ---
 
 ### 一、背景介绍
-Oracle表的列的数据类型可以是自定义的数据类型（UDT）。Oracle支持varray和嵌套表集合数据类型。其中，varray是有序的元素集合；嵌套表可以包含任意数量的元素，并且是无序的。这里仅仅介绍VARRAY自定义类型，嵌套表（Nested Table）和多维集合（Multilevel Collections）暂不考虑。
+Oracle表的列的数据类型可以是自定义的数据类型（UDT）。Oracle支持Varray和嵌套表（Nested Table）集合数据类型。其中，Varray是有序的元素集合；嵌套表可以包含任意数量的元素，并且是无序的。这里仅仅介绍VARRAY自定义类型，嵌套表（Nested Table）和多维集合（Multilevel Collections）暂不考虑。
+
+Varray是一组有序的数据元素。 给定Varray的所有元素都具有相同的数据类型或声明的Varray的子类型。 每个元素都有一个索引，它是一个与数组中元素位置相对应的数字。 索引号用于访问特定元素。定义Varray时，可以指定它可以包含的最大元素数，但稍后可以更改此数字。 数组中元素的数量是数组的大小。
+
+**定义集合类型**
+![Varray类型定义](https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/img/varray_type_def.gif)
 
 
 ### 二、转换规则
