--- a/ppas/20190322/20190322_01.md
+++ b/ppas/20190322/20190322_01.md
@@ -22,23 +22,103 @@ CREATE TABLE sal_emp (
 ### 二、转换规则
 1.**Oracle数据库**
 ```
--- 案例1:
+-- 案例1: 标量数据类型
+-- 最大元素个数为128的整型数组
+SQL> CREATE OR REPLACE TYPE typ_varray AS VARRAY(128) OF NUMBER;  
+  2  /
+
+Type created.
+
+SQL> CREATE TABLE tab_typ_varray(
+  2      id NUMBER,
+  3      name VARCHAR2(20),
+  4      info TYP_VARRAY
+  5  );
+
+Table created.
+
+SQL> INSERT INTO tab_typ_varray VALUES(1,'zhangsan',typ_varray(1));
+
+1 row created.
+
+SQL> INSERT INTO tab_typ_varray VALUES(2,'zhangsan',typ_varray(2,2));
+
+1 row created.
+
+SQL> INSERT INTO tab_typ_varray VALUES(3,'zhangsan',typ_varray(3,3,3));
+
+1 row created.
+
+SQL> commit;
+
+Commit complete.
+SQL> select * from tab_typ_varray;
+
+        ID NAME                 INFO
+---------- -------------------- ----------------------------------------
+         1 zhangsan             TYP_VARRAY(1)
+         2 zhangsan             TYP_VARRAY(2, 2)
+         3 zhangsan             TYP_VARRAY(3, 3, 3)
+
+SQL> 
+
+-- 案例2：对象数据类型
+-- 自定义对象类型
+SQL> CREATE TYPE phone_typ AS OBJECT (
+  2      country_code   VARCHAR2(2), 
+  3      area_code      VARCHAR2(3),
+  4      ph_number      VARCHAR2(7)
+  5  );
+  6  /
+
+Type created.
+-- 最大元素个数为5的自定义对象整型数组
+SQL> CREATE TYPE phone_varray_typ AS VARRAY(5) OF phone_typ;
+  2  /
+
+Type created.
+
+SQL> CREATE TABLE dept_phone_list (
+  2    dept_no NUMBER(5), 
+  3    phone_list phone_varray_typ
+  4  );
+
+Table created.
+
+SQL> INSERT INTO dept_phone_list VALUES (
+   100,
+  2    3     phone_varray_typ( phone_typ ('01', '650', '5550123'),
+  4                        phone_typ ('01', '650', '5550148'),
+  5                        phone_typ ('01', '650', '5550192')));
+
+1 row created.
+
+SQL> commit;
+
+Commit complete.
+
+SQL> select * from dept_phone_list;
+
+   DEPT_NO
+----------
+PHONE_LIST(COUNTRY_CODE, AREA_CODE, PH_NUMBER)
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+       100
+PHONE_VARRAY_TYP(PHONE_TYP('01', '650', '5550123'), PHONE_TYP('01', '650', '5550148'), PHONE_TYP('01', '650', '5550192'))
 
 
-
--- 案例2：
-
+SQL>
 
 
 ```
 
 2.**PPAS数据库**
 ```
--- 案例1：
+-- 案例1：标量数据类型
 
 
 
--- 案例2：
+-- 案例2：对象数据类型
 
 
 
