--- a/ppas/20190322/20190322_01.md
+++ b/ppas/20190322/20190322_01.md
@@ -115,7 +115,29 @@ SQL>
 2.**PPAS数据库**
 ```
 -- 案例1：标量数据类型
+edb=# CREATE TABLE tab_typ_varray(
+edb(#     id NUMBER,
+edb(#     name VARCHAR2(20),
+edb(#     info NUMBER[128]  -- 转换为PPAS对应的数组
+edb(# ); 
+CREATE TABLE
+edb=#
 
+edb=# INSERT INTO tab_typ_varray VALUES(1,'zhangsan','{1}');
+INSERT 0 1
+edb=# INSERT INTO tab_typ_varray VALUES(1,'zhangsan','{2,2}');
+INSERT 0 1
+edb=# INSERT INTO tab_typ_varray VALUES(1,'zhangsan','{3,3,3}');
+INSERT 0 1
+edb=# select * from tab_typ_varray;
+ id |   name   |  info   
+----+----------+---------
+  1 | zhangsan | {1}
+  1 | zhangsan | {2,2}
+  1 | zhangsan | {3,3,3}
+(3 rows)
+
+edb=# 
 
 
 -- 案例2：对象数据类型
