--- a/ppas/20190322/20190322_01.md
+++ b/ppas/20190322/20190322_01.md
@@ -118,7 +118,7 @@ SQL>
 edb=# CREATE TABLE tab_typ_varray(
 edb(#     id NUMBER,
 edb(#     name VARCHAR2(20),
-edb(#     info NUMBER[128]  -- 转换为PPAS对应的数组
+edb(#     info NUMBER[128]  -- 转换为PPAS对应数值类型的数组
 edb(# ); 
 CREATE TABLE
 edb=#
@@ -141,13 +141,30 @@ edb=#
 
 
 -- 案例2：对象数据类型
+edb=# CREATE TYPE phone_typ AS OBJECT (
+edb(#     country_code   VARCHAR2(2), 
+edb(#     area_code      VARCHAR2(3),
+edb(#     ph_number      VARCHAR2(7)
+edb(# );
+CREATE TYPE
+edb=# CREATE TABLE dept_phone_list (
+edb(#   dept_no NUMBER(5), 
+edb(#   phone_list phone_typ[5]  -- 转换为PPAS对应对象类型的数组
+edb(# );
+CREATE TABLE
 
+-- 使用ROW()
+edb=# INSERT INTO dept_phone_list VALUES (100,array[row('01', '650', '5550123'),row('01', '650', '5550148'),row('01', '650', '5550192')]::phone_typ[]);
+INSERT 0 1
+edb=# select * from dept_phone_list;
+ dept_no |                         phone_list                         
+---------+------------------------------------------------------------
+     100 | {"(01,650,5550123)","(01,650,5550148)","(01,650,5550192)"}
+(1 row)
 
+edb=# 
 
 ```
-
-
-
 
 
 ### 三、参考链接
