--- a/ppas/20190320/20190320_01.md
+++ b/ppas/20190320/20190320_01.md
@@ -34,6 +34,9 @@
 | from NVARCHAR2 | NVARCHAR2 | NVARCHAR2   | NVARCHAR2 | --            |
 
 ### 二、转换规则
+**日期相减**
++ Oracle：Oracle 时间相减，得到的是一个浮点值N，代表N天。
++ PPAS/PG：PPAS 日期相减，得到的是一个INTERVAL时间间隔类型，可以转换为一个浮点型。
 
 
 
