--- a/ppas/20190320/20190320_01.md
+++ b/ppas/20190320/20190320_01.md
@@ -61,11 +61,22 @@ edb=#
 **注意：由于结果是浮点数，不精确，因此最后的结果位数可能不完全一致。**
 
 **2.案例分享**
+由于PPAS的隐式类型转换没有Oracle丰富，所以很多时候，需要结合具体的案例进行相应的显示类型转换，这里主要介绍下面3个案例：
++ TO_CHAR(INTERVAL)
++ nvl2(character varying, integer, integer)
++ interval + numeric 
 
-TO_CHAR(INTERVAL)
-nvl2(character varying, integer, integer)
-interval + numeric 
+```
+-- 1.案例1
 
+
+-- 2.案例2
+
+
+-- 3.案例3
+
+
+```
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/E11882_01/server.112/e41084/sql_elements002.htm#SQLRF51036](https://docs.oracle.com/cd/E11882_01/server.112/e41084/sql_elements002.htm#SQLRF51036)
