--- a/ppas/20190320/20190320_01.md
+++ b/ppas/20190320/20190320_01.md
@@ -62,7 +62,7 @@ edb=#
 
 **2.案例分享**
 由于PPAS的隐式类型转换没有Oracle丰富，所以很多时候，需要结合具体的案例进行相应的显示类型转换，这里主要介绍下面3个案例：
-+ TO_CHAR(INTERVAL)
++ to_char(interval)
 + nvl2(character varying, integer, integer)
 + interval + numeric 
 
