--- a/ppas/20190323/201903023_01.md
+++ b/ppas/20190323/201903023_01.md
@@ -3,8 +3,20 @@
 
 ### 一、背景介绍
 
+**TZ_OFFSET时区函数**
+
+![tz_offset基本语法](https://docs.oracle.com/cd/B19306_01/server.102/b14200/img/tz_offset.gif)
+
+
+**FROM_TZ时区函数**
+
+![from_tz基本语法](https://docs.oracle.com/cd/B19306_01/server.102/b14200/img/from_tz.gif)
+
+
 
 ### 二、转换规则
 
 
 ### 三、参考链接
+1.[https://docs.oracle.com/cd/B19306_01/server.102/b14200/functions202.htm](https://docs.oracle.com/cd/B19306_01/server.102/b14200/functions202.htm)
+2.[https://docs.oracle.com/cd/B19306_01/server.102/b14200/functions059.htm](https://docs.oracle.com/cd/B19306_01/server.102/b14200/functions059.htm)
