--- a/ppas/20190323/201903023_01.md
+++ b/ppas/20190323/201903023_01.md
@@ -3,9 +3,20 @@
 
 ### 一、背景介绍
 
-**TZ_OFFSET时区函数**
+**TZ_OFFSET时区函数:** TZ_OFFSET根据语句执行的日期返回与参数对应的时区偏移量。可以输入有效的时区名称，与UTC的时区偏移（仅返回自身），或关键字 SESSIONTIMEZONE 或 DBTIMEZONE。time_zone_name的有效值可以查询V$TIMEZONE_NAMES.TZNAME获得。
 
 ![tz_offset基本语法](https://docs.oracle.com/cd/B19306_01/server.102/b14200/img/tz_offset.gif)
+
+```
+-- 返回从UTC到 'US/Eastern' 和 'Asia/Shanghai' 时区的偏移量。
+SQL> SELECT TZ_OFFSET('US/Eastern'),TZ_OFFSET('Asia/Shanghai') FROM DUAL;
+
+TZ_OFFS TZ_OFFS
+------- -------
+-04:00  +08:00
+
+SQL> 
+```
 
 
 **FROM_TZ时区函数**
